Added user authorization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'APPCI', APP_CLIENT_ID
+        buildConfigField 'String', 'APPCS', APP_CLIENT_SECRET
     }
     buildTypes {
         release {
