--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# OAuth params
+APP_CLIENT_ID="1a884e38444ceda41fb7"
+APP_CLIENT_SECRET="f82fb8a79669785d0c5a3c471788ad43c754fc17"
