--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${ver.kotlin}"
     implementation "androidx.core:core-ktx:${ver.kotlin_core_ktx}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${ver.kotlin_coroutines}"
 
     implementation "androidx.appcompat:appcompat:${ver.appcompat}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${ver.lifecycle}"
