--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
     kotlinOptions {
         jvmTarget = ver.kotlinJvmTarget
     }
+    viewBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.katic.githubapp"
         minSdkVersion ver.minSdkVersion
@@ -29,6 +32,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+androidExtensions {
+    features = ["parcelize"]
 }
 
 dependencies {
