--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
 
         ver.glide = "4.11.0"
         ver.timber = "4.7.1"
+        ver.dagger = "2.26"
 
         ver.rxjava = "2.2.10"
         ver.rxjava_android = "2.1.1"
